# submods-to-source-repos

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alpine-release.sh  cabal.haskell-ci  submods-to-source-repos.cabal
.github/workflows/: haskell-ci.yml
exe/: Main.hs
