cabal-version:      2.4
name:               submods-to-source-repos
version:            0.1
synopsis:           Convert submodules to source-repository-packages
description:        Convert a submodule-using @cabal.project@ file to one that
                    uses @source-repository-package@s.
homepage:           https://github.com/RyanGlScott/submods-to-source-repos
bug-reports:        https://github.com/RyanGlScott/submods-to-source-repos/issues
license:            BSD-3-Clause
author:             Ryan Scott
maintainer:         Ryan Scott <ryan.gl.scott@gmail.com>
stability:          Provisional
copyright:          (C) 2021 Ryan Scott
category:           Development
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
tested-with:        GHC == 8.4.4
                  , GHC == 8.6.5
                  , GHC == 8.8.4
                  , GHC == 8.10.7
                  , GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/submods-to-source-repos

executable submods-to-source-repos
    main-is:           Main.hs
    build-depends:     base >= 4.11 && < 5
                     , Cabal >= 3.6 && < 3.7
                     , cabal-install-parsers >= 0.4.3 && < 0.5
                     , containers >= 0.5.7.1 && < 0.7
                     , directory >= 1.3 && < 1.4
                     , extra >= 1.7.10 && < 1.8
                     , filepath >= 1.4.1.1 && < 1.5
                     , network-uri >= 2.6.1 && < 2.7
                     , optparse-applicative >= 0.16.1 && < 0.17
                     , pretty >= 1.1.3.3 && < 1.2
                     , process >= 1.4.3 && < 1.7
    hs-source-dirs:    exe
    default-language:  Haskell2010
    ghc-options:       -Wall -threaded
